# qexpy

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .spyderworkspace  CHANGELOG.md  CHANGLOG.md  Fitting.py  Makefile  README.md  Uncertainties.py  __init__.py  fitting.py  operations.py  pyproject.toml  requirements-dev.txt  requirements.txt  ryantest.py  setup.py  uncertainties.py
.github/workflows/: docs  docs.yml  format.yml  pythonpackage.yml  test.yml  tests.yml
QExPy/: Test.py  error.py  error_.py  error_operations.py  error_operations_.py  fitting.py  operations.py  plotting.py  plotting_.py  uncertainties.py
docs/: .gitignore  Makefile  Youngs Modulus Lab.ipynb  conf.py  index.rst  intro.rst  make.bat  measurement.rst  measurement_arr.rst  operations.rst  plot.rst  plotting.rst  requirements.txt  uncertainties.rst  xydataset.rst  xyfitter.rst
docs/_build/doctrees/: LICENCE.doctree  LICENSE.doctree  environment.pickle  index.doctree  intro.doctree  measurement.doctree  measurement_arr.doctree  operations.doctree  uncertainties.doctree  xydataset.doctree  xyfitter.doctree
docs/_build/html/: .buildinfo  LICENCE.html  LICENSE.html  genindex.html  index.html  intro-1.py  intro.html  measurement.html  measurement_arr.html  objects.inv  operations.html  py-modindex.html  search.html  searchindex.js  uncertainties.html  xydataset.html  xyfitter.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/QExPy/: uncertainties.html
docs/_build/html/_modules/qexpy/: error.html  fitting.html
docs/_build/html/_sources/: LICENCE.txt  LICENSE.txt  index.rst.txt  index.txt  intro.rst.txt  intro.txt  measurement_arr.rst.txt  operations.rst.txt  operations.txt  uncertainties.rst.txt  uncertainties.txt  xydataset.rst.txt  xyfitter.rst.txt
docs/source/: conf.py  data.rst  error_propagation.rst  fitting.rst  getting_started.ipynb  getting_started.nblink  index.rst  intro.rst  measurement_array.rst  measurements.rst  plotting.rst  plotting_and_fitting.nblink  xydata.rst
docs/source/_static/: custom.css  qexpy.css
docs/source/_templates/autosummary/: class.rst
docs/source/api-reference/: constants.rst  core.rst  experimental-value.rst  index.rst  options.rst
docs/source/developer-guide/: index.rst
docs/source/getting-started/: index.rst  installation.rst  tutorial.rst
docs/source/user-guide/: basics.rst  constants.rst  index.rst  options.rst  units.rst
examples/: getting_started.ipynb  measurements.ipynb  plotting_and_fitting.ipynb
examples/jupyter/: 1_Intro_to_Error_Propagation.ipynb  2_Intro_to_Graphing.ipynb  3_Load_data_into_plot.ipynb  4_Interactive_Linear_Fit-Copy1.ipynb  4_Interactive_Linear_Fit.ipynb  5_Fitting_Data.ipynb  6_Advanced_Plotting.ipynb  ErrorPropagation.ipynb  Graphing.ipynb  Load_data_into_plot.ipynb
qexpy/: __init__.py  _test.py  _typing.py  defaults.py  error.py  error_operations.py  fitting.py  format.py  plot_utils.py  plotting.py  typing.py  units.py  utils.py
qexpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qexpy/_config/: __init__.py  config.py  config_init.py
qexpy/core/: __init__.py  array.py  constants.py  derived_value.py  experimental_value.py  formula.py  functions.py  measurement.py  measurements.py  monte_carlo.py  quantity.py
qexpy/data/: __init__.py  data.py  datasets.py  operations.py  utils.py
qexpy/fitting/: __init__.py  fitting.py  utils.py
qexpy/plotting/: __init__.py  plot_utils.py  plotobjects.py  plotting.py
qexpy/settings/: __init__.py  literals.py  settings.py
qexpy/utils/: __init__.py  exceptions.py  formatter.py  printing.py  units.py  utils.py
tests/: .coveragerc  .pylintrc  pytest.ini  test_config.py  test_datasets.py  test_error_propagation.py  test_fitting.py  test_format.py  test_measurement.py  test_measurements.py  test_operations.py  test_settings.py  test_units.py  test_utils.py
tests/core/: test_derived_value.py  test_experimental_value.py  test_formula.py  test_functions.py  test_measurement.py  test_measurements.py  test_monte_carlo.py  test_quantity.py
tests/resources/: data_for_test_custom_fit.csv  data_for_test_gaussian_fit.csv  data_for_test_load_data.csv  sample_data.csv
tests/utils/: test_formatter.py  test_units.py
